VNLengthVote: Fix weird styling and alignment issues

--- a/css/v2.css
+++ b/css/v2.css
@@ -241,12 +241,12 @@ div.vndetails td.relations input:not(:checked) ~ dl .unofficial { display: none 
 div.vndetails td.anime span    { font-size: 10px; padding-right: 4px; }
 div.vndetails .lengthvotefrm {
     margin-top: -18px; text-align: right;
-    > form { text-align: left }
-    > form div > div {
-        display: flex;
-        select { flex: 1 }
-        input { flex: 0 0 30px }
+    form { text-align: left }
+    td {
+        padding: 0;
+        input[type=button] { width: 25px; margin-right: -2px }
     }
+    table, select { width: 100% }
 }
 .ulistvn     { padding: 5px 0 0 0 }
 .ulistvn > strong { font-size: 14px }
